src/styles/components/notes.scss
.notes-container {
    min-height: calc(100vh - 3.6rem);
    
    .notes-list {
        background: $sidebar-bg;
        width: 20rem;
        position: fixed;
        z-index: 10;
        margin: 0;
        top: 3.6rem;
        left: 0;
        bottom: 0;
        overflow-y: auto;
    }

    .notes-create {
        margin: 0;
        padding-left: 20rem;
        height: calc(100vh - 3.6rem);
    }
}

@media only screen and (max-width: 812px) {
    .notes-container {
        .notes-list {
            transform: translateX(-100%);
            transition: transform .2s ease;
        }

        .notes-create {
            padding-left: 0;
        }
    }

    .notes-container.sidebar-open {
        .notes-list {
            transform: translateX(0);
        }
    }
}

